Fixing bugs with style on mobile devices part6.

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -299,6 +299,7 @@
                             /* Styles for text in stats. */
                             .text {
                                 overflow-x: auto;
+                                overflow-y: hidden;
                             }
                         }
 
